# adpp

./: CMakeLists.txt  README.md  cppad.hpp  main.cpp
.github/workflows/: images.yml  test_suite.yml
adpp/: backward.hpp  common.hpp  concepts.hpp  dtype.hpp  type_traits.hpp  utils.hpp  variadic_accessor.hpp
adpp/backward/: bindings.hpp  concepts.hpp  derivative.hpp  derivatives.hpp  differentiate.hpp  evaluate.hpp  expression.hpp  expression_tree.hpp  io.hpp  operand.hpp  operators.hpp  stream.hpp  symbols.hpp  tensor.hpp  vector.hpp
benchmark/: CMakeLists.txt
benchmark/backwards/: CMakeLists.txt  README.md  backwards.cpp  deep_expression.cpp  deep_gradient.cpp  evaluate.py  test_expr.hpp
cppad/: backward.hpp  common.hpp  concepts.hpp  constant.hpp  cppad.hpp  detail.hpp  dtype.hpp  expression.hpp  function.hpp  operators.hpp  traits.hpp  type_traits.hpp  variable.hpp  variadic_accessor.hpp
cppad/backward/: bindings.hpp  concepts.hpp  derivative.hpp  derivatives.hpp  differentiate.hpp  evaluate.hpp  expression.hpp  expression_tree.hpp  format.hpp  let.hpp  operand.hpp  operators.hpp  stream.hpp  symbols.hpp  val.hpp  var.hpp
examples/: CMakeLists.txt  add_and_multiply.cpp
test/: CMakeLists.txt  test_common.cpp  test_concepts.cpp  test_constant.cpp  test_detail.cpp  test_function.cpp  test_operators.cpp  test_type_traits.cpp  test_utils.cpp  test_variable.cpp
test/backward/: CMakeLists.txt  test_derivative.cpp  test_expression.cpp  test_expression_derivative.cpp  test_expression_evaluate.cpp  test_expression_io.cpp  test_expression_stream.cpp  test_expression_tree.cpp  test_newton_solver.cpp  test_operators.cpp  test_symbol_traits.cpp  test_symbols.cpp  test_symbols_operators.cpp  test_tensor.cpp  test_var_let.cpp  test_vector_expression.cpp
